tried fix extra spaces

--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -5,12 +5,12 @@ p{
 
 h1{
 	font-size: 40px;
-	padding-bottom:2cm;
+	padding-bottom:.1cm;
 }
 
 h2{
 	font-size: 30px;
-	padding-bottom: 2cm;
+	padding-bottom: .1cm;
 }
 
 h3{
